--- a/templates/component/project/task/task_form.html.twig
+++ b/templates/component/project/task/task_form.html.twig
@@ -1,6 +1,6 @@
 {% form_theme form 'bootstrap_4_layout.html.twig' %}
 {{ form_start(form) }}
-<div class="overflow-auto" style="height: 450px;">
+<div class="overflow-auto assignForm" style="height: 450px;">
     {{ form_widget(form) }}
 </div>
 <button class="btn btn-secondary">{{ button_label|default('Save') }}</button>
