--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -2,6 +2,11 @@
 
 {% block title %}{{ parent() }} - {{ project.title }}{% endblock %}
 
+{# {% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('addFile') }}
+{% endblock %} #}
+
 {% block framed %}
 
 
