--- a/templates/component/project/task/task_delete_form.html.twig
+++ b/templates/component/project/task/task_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('project_task_delete', {'idTask': task.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ task.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn"><i class="far fa-trash-alt"></i></button>
 </form>
