messenger one to one in progress

--- a/templates/component/dashboard/_navbar_dashboard.html.twig
+++ b/templates/component/dashboard/_navbar_dashboard.html.twig
@@ -4,5 +4,6 @@
         <a class="nav-link changingtab" id="v-pills-accomplishments-tab" data-toggle="pill" href="#v-pills-accomplishments" role="tab" aria-controls="v-pills-accomplishments" aria-selected="false">Accomplishements</a>
         <a class="nav-link changingtab" id="v-pills-skills-tab" data-toggle="pill" href="#v-pills-skills" role="tab" aria-controls="v-pills-skills" aria-selected="false">Your Skills</a>
         <a class="nav-link changingtab" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
+        <a class="nav-link changingtab" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
     </div>
 </nav>
