--- a/templates/component/message/_messages_received.html.twig
+++ b/templates/component/message/_messages_received.html.twig
@@ -8,14 +8,17 @@
                         <li>
                             <h4>Message sent at : {{ message.sentAt|date("m/d/Y", false) }}</h4>
                             <span>message send by : {{ message.sender.lastname }}</span>
+
+                            <a href="{{ path('messages_conv', {'id': message.sender.id} ) }}">Voir conv</a>
+
                             <p>content : {{ message.content }}</p>
                             <p>{{ message.isRead ? 'Opened' : 'Not Opened' }}</p>
                             {% if message.isRead == true %}
-                            <form action="{{ path('messages_not_view', {'id': project.id, 'not_view_id': message.id} ) }}" method="post">
+                            <form action="{{ path('messages_not_view', {'not_view_id': message.id} ) }}" method="post">
                                 <button>Not view</button>
                             </form>
                             {% else %}
-                            <form action="{{ path('messages_view', {'id': project.id, 'view_id': message.id} ) }}" method="post">
+                            <form action="{{ path('messages_view', {'view_id': message.id} ) }}" method="post">
                                 <button>View</button>
                             </form>
                             {% endif %}
