--- a/templates/component/message/_messages.html.twig
+++ b/templates/component/message/_messages.html.twig
@@ -3,7 +3,7 @@
         <div class="home-section d-flex flex-column bg-light rounded p-4 shadow w-100 mx-4">
             <div>
                 <h1>Inbox</h1>
-                <p><a href="{{ path('messages_new', {'id': project.id}) }}">Write a new message</a></p>
+                <p><a href="{{ path('messages_new')}}">Write a new message</a></p>
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
                         <a class="nav-link active" id="cards-tab" data-toggle="tab" href="#received" role="tab"
@@ -16,10 +16,10 @@
                 </ul>
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active justify-content-center" id="received" role="tabpanel" aria-labelledby="cards-tab">
-                        {% include 'component/project/message/_messages_received.html.twig' %}
+                        {% include 'component/message/_messages_received.html.twig' %}
                     </div>
                     <div class="tab-pane fade" id="sent" role="tabpanel" aria-labelledby="table-tab">
-                        {% include 'component/project/message/_messages_sent.html.twig' %}
+                        {% include 'component/message/_messages_sent.html.twig' %}
                     </div>
                 </div>
             </div>
