--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -25,6 +25,9 @@
                 <div class="tab-pane fade changingcontent" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                     {% include 'component/dashboard/_userprofile.html.twig' %}
                 </div>
+                <div class="tab-pane fade changingcontent" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
+                    {% include 'component/dashboard/_user_messages.html.twig' %}
+                </div>
             </div>
         </div>
     </div>
