bug refactoring button and anchor nav

--- a/templates/component/homepage/_header.html.twig
+++ b/templates/component/homepage/_header.html.twig
@@ -10,20 +10,20 @@
 
         <ul class="navbar-nav mr-auto text-blueish form-inline">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Home
                 </a>
                 <div id="home-menu" class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#concept">Concept</a>
-                    <a class="dropdown-item" href="#whoweare">Who we are ?</a>
-                    <a class="dropdown-item" href="#howdoesitwork">How does it work ?</a>
-                    <a class="dropdown-item" href="#home-carousel">News</a>
-                    <a class="dropdown-item" href="#questionsanswers">Q & A</a>
+                    <a class="dropdown-item"  href="/#concept">Concept</a>
+                    <a class="dropdown-item" href="/#whoweare">Who we are ?</a>
+                    <a class="dropdown-item" href="/#howdoesitwork">How does it work ?</a>
+                    <a class="dropdown-item" href="/#home-carousel">News</a>
+                    <a class="dropdown-item" href="/#questionsanswers">Q & A</a>
                 </div>
             </li>
 
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Projects
                 </a>
                 <div id="home-menu" class="dropdown-menu" aria-labelledby="navbarDropdown">
