--- a/templates/project/new.html.twig
+++ b/templates/project/new.html.twig
@@ -7,6 +7,6 @@
         {% form_theme form 'bootstrap_4_layout.html.twig' %}
         {{ form_start(form) }}
         {{ form_widget(form) }}
-        <button>Create a request</button>
+        <button class="btn btn-primary mb-3">Create a request</button>
         {{ form_end(form) }}
 {% endblock %}
