--- a/templates/component/project/_project_tasks_table.html.twig
+++ b/templates/component/project/_project_tasks_table.html.twig
@@ -19,7 +19,8 @@
             <th scope="col">Attributed to</th>
             {% if (app.user and
                 app.user.isParticipantOn(project) and
-                app.user.getParticipationOn(project).role != constant('App\\Entity\\Participant::ROLE_WAITING_VOLUNTEER')) %}
+                app.user.getParticipationOn(project).role != constant('App\\Entity\\Participant::ROLE_WAITING_VOLUNTEER'))  or
+                is_granted('ROLE_ADMIN') %}
                 <th scope="col">Add participant</th>
                 <th scope="col">Deadline</th>
                 <th scope="col">Status</th>
@@ -40,7 +41,8 @@
             <td class="user">{% for user in task.users %}<cite>{{ user.firstname }} ,</cite>{% endfor %}</td>
             {% if (app.user and
                 app.user.isParticipantOn(project) and
-                app.user.getParticipationOn(project).role != constant('App\\Entity\\Participant::ROLE_WAITING_VOLUNTEER')) %}
+                app.user.getParticipationOn(project).role != constant('App\\Entity\\Participant::ROLE_WAITING_VOLUNTEER')) or
+                is_granted('ROLE_ADMIN') %}
             <td class="Add participant">
                 <form action="{{ path('project_task_attribute', {'idTask' : task.id}) }}" method="post">
                     <button class="btn card-link"><i class="fas fa-user-edit"></i></button>
