--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -61,7 +61,7 @@
                 {% include 'component/project/_project_tasks.html.twig' %}
             </div>
             <div class="tab-pane fade changingcontent" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
-                {% include 'component/project/_messages.html.twig' %}
+                {% include 'component/message/_messages.html.twig' %}
             </div>
             <div class="tab-pane fade changingcontent" id="v-pills-files" role="tabpanel" aria-labelledby="v-pills-files-tab">
                 {% include 'component/project/_project_files.html.twig' %}
@@ -98,7 +98,7 @@
                             </a>
                         </div>
                         <div>
-                            <form action="{{ path('status_closed', {'id': project.id}) }}" method="post" onsubmit="return confirm('Do you really want to close the project ?')">
+                            <form action="{{ path('project_close', {'id': project.id}) }}" method="post" onsubmit="return confirm('Do you really want to close the project ?')">
                                 <button class="btn btn-secondary-alt my-2 mx-2">Close</button>
                             </form>
                         </div>
