--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -3,7 +3,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-
+    {{ encore_entry_script_tags('isotope') }}
 {% endblock %}
 
 {% block framed %}
