Adusting layout and icons for isotope

--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -5,7 +5,8 @@ $theme-colors: (
         "secondary": #E74011,
         "secondary-alt" : #F39200,
         "blueish":#009BA4,
-        "greenish": #52AE32
+        "greenish": #52AE32,
+        "grey": #F5F5F5,
 );
 
 $font-family-base: 'Montserrat Alternates', 'Roboto';
