--- a/assets/styles/project.scss
+++ b/assets/styles/project.scss
@@ -3,52 +3,19 @@
   font-size: 85%;
 }
 
-.button {
-  display: inline-block;
-  padding: 0.5em 1.0em;
-  margin-bottom: 10px;
-  background: #EEE;
-  border: none;
-  border-radius: 7px;
-  background-image: linear-gradient( to bottom, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.2) );
-  color: #EA504C;
-  font-family: sans-serif;
-  font-size: 16px;
-  cursor: pointer;
+img.status_3 {
+  opacity: 0.2;
+
+  &:hover {
+    opacity: 1;
+  }
 }
 
-.button:hover {
-  background-color: #8CF;
-  color: #222;
+.btn-lookingvolunteers {
+  position: absolute;
+  border-radius : 50px;
+  right: 5px;
+  top: 5px;
 }
 
-.button:active,
-.button.is-checked {
-  background-color: #28F;
-}
 
-.button.is-checked {
-  color: white;
-}
-
-.button:active {
-  box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.8);
-}
-
-/* ---- button-group ---- */
-
-.button-group:after {
-  content: '';
-  display: block;
-  clear: both;
-}
-
-.button-group .button {
-  float: left;
-  border-radius: 0;
-  margin-left: 0;
-  margin-right: 1px;
-}
-
-.button-group .button:first-child { border-radius: 0.5em 0 0 0.5em; }
-.button-group .button:last-child { border-radius: 0 0.5em 0.5em 0; }
