--- a/templates/project/close.html.twig
+++ b/templates/project/close.html.twig
@@ -10,7 +10,7 @@
     <ul>
         {% for volunteer in project.getVolunteers() %}
             <li>{{ volunteer.user.firstName }} {{ volunteer.user.lastName }} -
-                <a href="#" class="btn btn-greenish">
+                <a href="{{ path('recommendation_new', {'project': project.id, 'volunteer': volunteer.user.id}) }}" class="btn btn-greenish">
                     Add a review
                 </a>
             </li>
