close project after reviews

--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -89,8 +89,9 @@
             <li class="list-group-item p-0 py-2  d-flex flex-wrap justify-content-start align-items-center">
                 {% if (app.user and
                    app.user.isParticipantOn(project) and
-                   app.user.getParticipationOn(project).role == constant('App\\Entity\\Participant::ROLE_PROJECT_OWNER')) or
-                   is_granted('ROLE_ADMIN') %}
+                   app.user.getParticipationOn(project).role == constant('App\\Entity\\Participant::ROLE_PROJECT_OWNER') and
+                    project.status != constant('App\\Entity\\Project::STATUS_CLOSED')) or
+                   is_granted('ROLE_ADMIN')  %}
                     <div class="d-flex justify-content-center align-items-center flex-wrap">
                         <div>
                             <a href="{{ path('project_edit', {'id': project.id}) }}">
