--- a/templates/project/close.html.twig
+++ b/templates/project/close.html.twig
@@ -18,4 +18,7 @@
             </li>
         {% endfor %}
     </ul>
+    <form action="{{ path('status_closed', {'id': project.id}) }}" method="post" onsubmit="return confirm('This project will be definitively closed. Be sure to write recommendation for all project members before click OK.')">
+        <button class="btn btn-secondary-alt my-2 mx-2">Close the project</button>
+    </form>
 {% endblock %}
