--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -17,7 +17,7 @@
                     {% include 'component/dashboard/_user_participations.html.twig' %}
                 </div>
                 <div class="tab-pane fade changingcontent" id="v-pills-accomplishments" role="tabpanel" aria-labelledby="v-pills-accomplishments-tab">
-                    Your accomplishments....
+                    {% include 'component/dashboard/_user_received_recommendations.html.twig' %}
                 </div>
                 <div class="tab-pane fade changingcontent" id="v-pills-skills" role="tabpanel" aria-labelledby="v-pills-skills-tab">
                     {% include 'component/dashboard/_user_skill_form.html.twig' %}
