--- a/templates/recommendation/new.html.twig
+++ b/templates/recommendation/new.html.twig
@@ -4,6 +4,75 @@
 
 {% block framed %}
     {% if app.user and (app.user.getParticipationOn(project).role == constant('App\\Entity\\Participant::ROLE_PROJECT_OWNER')) %}
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 d-flex container">
+                    <div class="row justify-content-center align-items-center">
+
+                        <img class="m-3 col-10 col-md-4" src="https://thispersondoesnotexist.com/image" alt="{{ volunteer.firstname }} {{ volunteer.lastname }}"
+                             style="border-radius: 50%">
+
+                        <div class="d-flex flex-column justify-content-center col-12 col-md-5">
+                            <h5 class="my-4">{{ volunteer.firstName }} {{ volunteer.lastName }}</h5>
+                            <ul class="list-group list-group-flush">Assigned tasks :
+                                {% for task in project.tasks %}
+                                    {% for currentVolunteer in task.users %}
+                                        {% if currentVolunteer.id == volunteer.id %}
+                                            <li class="list-group-item">{{ task.name }} -
+                                                <span class="font-italic">
+                                                {% if task.status == 0 %}
+                                                    <span class="text-secondary mb-1">To start </span>
+                                                {% elseif task.status == 1 %}
+                                                    <span class="text-blueish mb-1">In progress </span>
+                                                {% elseif task.status == 2 %}
+                                                    <span class="text-greenish text-light mb-1">Achieved</span>
+                                                {% endif %}
+                                            </span>
+                                            </li>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endfor %}
+                                {% for task in project.tasks %}
+                                    {% for currentVolunteer in task.users %}
+                                        {% if currentVolunteer.id == volunteer.id %}
+                                            <li class="list-group-item">{{ task.name }} -
+                                                <span class="font-italic">
+                                                {% if task.status == 0 %}
+                                                    <span class="text-secondary mb-1">To start </span>
+                                                {% elseif task.status == 1 %}
+                                                    <span class="text-blueish mb-1">In progress </span>
+                                                {% elseif task.status == 2 %}
+                                                    <span class="text-greenish text-light mb-1">Achieved</span>
+                                                {% endif %}
+                                            </span>
+                                            </li>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endfor %}
+                                {% for task in project.tasks %}
+                                    {% for currentVolunteer in task.users %}
+                                        {% if currentVolunteer.id == volunteer.id %}
+                                            <li class="list-group-item">{{ task.name }} -
+                                                <span class="font-italic">
+                                                {% if task.status == 0 %}
+                                                    <span class="text-secondary mb-1">To start </span>
+                                                {% elseif task.status == 1 %}
+                                                    <span class="text-blueish mb-1">In progress </span>
+                                                {% elseif task.status == 2 %}
+                                                    <span class="text-greenish text-light mb-1">Achieved</span>
+                                                {% endif %}
+                                            </span>
+                                            </li>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endfor %}
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     {{ form_start(form) }}
     <div class="d-flex flex-column">
         {{ form_label(form.content, 'Write your recommandation here :', {'label_attr': {'class': 'text-start'}}) }}
