--- a/templates/recommendation/new.html.twig
+++ b/templates/recommendation/new.html.twig
@@ -5,81 +5,51 @@
 {% block framed %}
     {% if app.user and (app.user.getParticipationOn(project).role == constant('App\\Entity\\Participant::ROLE_PROJECT_OWNER')) %}
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-12 d-flex container">
-                    <div class="row justify-content-center align-items-center">
-
-                        <img class="m-3 col-10 col-md-4" src="https://thispersondoesnotexist.com/image" alt="{{ volunteer.firstname }} {{ volunteer.lastname }}"
-                             style="border-radius: 50%">
-
-                        <div class="d-flex flex-column justify-content-center col-12 col-md-5">
-                            <h5 class="my-4">{{ volunteer.firstName }} {{ volunteer.lastName }}</h5>
-                            <ul class="list-group list-group-flush">Assigned tasks :
-                                {% for task in project.tasks %}
-                                    {% for currentVolunteer in task.users %}
-                                        {% if currentVolunteer.id == volunteer.id %}
-                                            <li class="list-group-item">{{ task.name }} -
-                                                <span class="font-italic">
-                                                {% if task.status == 0 %}
-                                                    <span class="text-secondary mb-1">To start </span>
-                                                {% elseif task.status == 1 %}
-                                                    <span class="text-blueish mb-1">In progress </span>
-                                                {% elseif task.status == 2 %}
-                                                    <span class="text-greenish text-light mb-1">Achieved</span>
-                                                {% endif %}
-                                            </span>
-                                            </li>
-                                        {% endif %}
-                                    {% endfor %}
+            <div class="row justify-content-center p-0">
+                <div class="col-12 d-flex p-0">
+                    <div class="row flex-column justify-content-center align-items-center">
+                        <img class="m-1 col-5 col-sm-4 col-md-3 col-lg-2 recommendation-profile" src="https://thispersondoesnotexist.com/image" alt="{{ volunteer.firstname }} {{ volunteer.lastname }}">
+                        <h5 class="text-secondary font-weight-bold my-3">{{ volunteer.firstName }} {{ volunteer.lastName }}</h5>
+                        <ul class="list-unstyled">Assigned tasks :
+                            {% for task in project.tasks %}
+                                {% for currentVolunteer in task.users %}
+                                    {% if currentVolunteer.id == volunteer.id %}
+                                        <li>
+                                            <i class="fas fa-pen-square text-blueish my-2"></i>
+                                            {{ task.name }} -
+                                            <span class="font-italic">
+                                            {% if task.status == 0 %}
+                                                <span class="text-secondary mb-1">To start </span>
+                                            {% elseif task.status == 1 %}
+                                                <span class="text-blueish mb-1">In progress </span>
+                                            {% elseif task.status == 2 %}
+                                                <span class="text-greenish text-light mb-1">Achieved</span>
+                                            {% endif %}
+                                        </span>
+                                        </li>
+                                    {% endif %}
                                 {% endfor %}
-                                {% for task in project.tasks %}
-                                    {% for currentVolunteer in task.users %}
-                                        {% if currentVolunteer.id == volunteer.id %}
-                                            <li class="list-group-item">{{ task.name }} -
-                                                <span class="font-italic">
-                                                {% if task.status == 0 %}
-                                                    <span class="text-secondary mb-1">To start </span>
-                                                {% elseif task.status == 1 %}
-                                                    <span class="text-blueish mb-1">In progress </span>
-                                                {% elseif task.status == 2 %}
-                                                    <span class="text-greenish text-light mb-1">Achieved</span>
-                                                {% endif %}
-                                            </span>
-                                            </li>
-                                        {% endif %}
-                                    {% endfor %}
-                                {% endfor %}
-                                {% for task in project.tasks %}
-                                    {% for currentVolunteer in task.users %}
-                                        {% if currentVolunteer.id == volunteer.id %}
-                                            <li class="list-group-item">{{ task.name }} -
-                                                <span class="font-italic">
-                                                {% if task.status == 0 %}
-                                                    <span class="text-secondary mb-1">To start </span>
-                                                {% elseif task.status == 1 %}
-                                                    <span class="text-blueish mb-1">In progress </span>
-                                                {% elseif task.status == 2 %}
-                                                    <span class="text-greenish text-light mb-1">Achieved</span>
-                                                {% endif %}
-                                            </span>
-                                            </li>
-                                        {% endif %}
-                                    {% endfor %}
-                                {% endfor %}
-                            </ul>
-                        </div>
-
+                            {% endfor %}
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-    {{ form_start(form) }}
-    <div class="d-flex flex-column">
-        {{ form_label(form.content, 'Write your recommandation here :', {'label_attr': {'class': 'text-start'}}) }}
-        {{ form_widget(form.content, {'label_attr': {'height': '5rem'}}) }}
-    </div>
-    <input type="submit" value="Submit" class="btn btn-greenish mt-3">
-    {{ form_end(form) }}
+        <div class="container p-0">
+            <div class="row justify-content-center p-0">
+                <div class="col-12 col-md-7 p-0">
+                    {{ form_start(form) }}
+                    <div class="d-flex flex-column">
+                        {{ form_label(form.content, 'Write your recommandation here :', {'label_attr': {'class': 'text-start'}}) }}
+                        {{ form_widget(form.content) }}
+                    </div>
+                    <div class="d-flex justify-content-center my-3">
+                        <input type="submit" value="Submit" class="btn btn-greenish mt-3">
+                    </div>
+                    {{ form_end(form) }}
+                </div>
+            </div>
+        </div>
     {% else %}
         <h1>ERROR 404 !</h1>
     {% endif %}
