finish front recommendations on dashbord

--- a/assets/styles/dashboard.scss
+++ b/assets/styles/dashboard.scss
@@ -76,3 +76,11 @@
     }
   }
 }
+
+.fa-recommendation {
+  font-size: 2.5rem;
+}
+
+.recommendation-box {
+  border-left: var(--greenish) solid 5px;
+}
