task deadline format

--- a/templates/component/_project_list.html.twig
+++ b/templates/component/_project_list.html.twig
@@ -26,7 +26,7 @@
     <div class="row row-eq-height">
         <div class="grid card-deck col-12">
             {% for project in projects %}
-                {% if project.status is not same as 0 or is_granted('ROLE_ADMIN') or app.user.participants.owner %}
+                {% if project.status is not same as 0 or is_granted('ROLE_ADMIN') or app.user and app.user.participants.owner %}
                 <div class="element-item vh-50 m-3 p-0 card {% for sdg in project.sdgs %}{{ sdg.identifier }}{% endfor %} status_{{ project.status}} col-md-3 col-sm-12" data-commonskills="{{ project.commonSkillsWithUser|length }}" >
                     <div class="position-relative">
                         <a href="{{ path('project_show', {'id': project.id}) }}">
